Introduced `SortBy.unsorted()` which is now the default sort specification used when no one is specified explicitly in queries